--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@fontsource/crete-round": "^5.2.5",
     "@fontsource/handlee": "^5.2.5",
+    "@headlessui/react": "^2.2.1",
     "@tailwindcss/vite": "^4.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
